<resources>
    <string name="app_name">FeiteMobile</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test_chat">TestChat</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>textLogo_name

    <!-- 主页面-->
    <string name="main_tab_1_text">课程</string>
    <string name="main_tab_2_text">公社</string>
    <string name="main_tab_3_text">我的主页</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 课程tab的顶端tab标签-->
    <string name="tab_1_top_tab1_text">全部课程</string>
    <string name="tab_1_top_tab2_text">我的课程</string>
    <string name="tab_1_top_tab3_text">直播</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="title_activity_class_category">ClassCategoryActivity</string>
    <string name="title_activity_class_detail">ClassDetailActivity</string>
    <string name="title_activity_class_detail__info">ClassDetail_InfoActivity</string>
    <string name="title_activity_tab2__forum">Tab2_ForumActivity</string>
    <string name="title_activity_tab2_create_top">Tab2CreateTopActivity</string>
    <string name="title_activity_album">AlbumActivity</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_image_file">ImageFile</string>
    <string name="title_activity_show_all_photo">ShowAllPhoto</string>


    <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>


</resources>
