<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tianxi.feitemobile.Fragment.ClassFragment">


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/text1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/tab_1_top_tab1_text"
            android:textColor="#000000"
            android:textSize="20.0dip" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/tab_1_top_tab2_text"
            android:textColor="#000000"
            android:textSize="20.0dip" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/tab_1_top_tab3_text"
            android:textColor="#000000"
            android:textSize="20.0dip" />
    </LinearLayout>

    <ImageView
        android:id="@+id/cursor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="matrix"
        android:src="@drawable/tab1_tabbuttonline" />

    <android.support.v4.view.ViewPager
        android:id="@+id/vPager"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:background="#000000"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />


    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:gravity="center_vertical"-->
        <!--android:orientation="horizontal"-->
        <!--android:baselineAligned="true">-->
        <!-- -->
        <!--<RelativeLayout-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height=""></RelativeLayout>-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/tab_1_top_tab1"/>-->
    <!--</LinearLayout>-->

    <!--<RelativeLayout-->

        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent" >-->

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->

        <!--android:gravity="center_vertical"-->
        <!--android:orientation="horizontal"-->
        <!--android:baselineAligned="true">-->


        <!--<RelativeLayout-->

            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1.0" >-->


            <!--<TextView-->

                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:text="@string/bottom_tab_know"-->
                <!--android:textColor="@color/bottomtab_normal"-->
                <!--android:textSize="@dimen/tab1_top_tab_text_size"/>-->
        <!--</RelativeLayout>-->

        <!--<RelativeLayout-->

            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1.0" >-->


            <!--<TextView-->

                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:text="@string/bottom_tab_wantknow"-->
                <!--android:textColor="@color/bottomtab_normal"-->
                <!--android:textSize="@dimen/tab1_top_tab_text_size" />-->
        <!--</RelativeLayout>-->

        <!--<RelativeLayout-->

            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1.0" >-->


            <!--<TextView-->

                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:text="@string/bottom_tab_my"-->
                <!--android:textColor="@color/bottomtab_normal"-->
                <!--android:textSize="@dimen/tab1_top_tab_text_size" />-->
        <!--</RelativeLayout>-->

    <!--</LinearLayout>-->
    <!--</RelativeLayout>-->

</LinearLayout>
